k8s/services/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: online-learning-platform-namespace
spec:
    selector:
        app: online-learning-platform-frontend
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    type: NodePort
