k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: online-learning-frontend-ingress
    namespace: online-learning-platform-namespace
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: online-learning.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 3000
